class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  namespace: prod
  name: alb
spec:
  controller: ingress.k8s.aws/alb
